Improveved home page

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 							<header>	
 								<h2>
 									An online learning platform for all.<br>
-									LEARN SHARE GROW TOGETHER!
+									
 								</h2>
 						
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/math.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Maths</h2>
@@ -72,7 +72,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/Neuron.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Science</h2>
@@ -83,7 +83,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/computer-2.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Programming</h2>
@@ -94,7 +94,7 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/Engineering.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Engineering</h2>
@@ -105,7 +105,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/finance.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Finance</h2>
@@ -116,7 +116,7 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/arts.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Arts</h2>
@@ -127,7 +127,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/books.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Blogs</h2>
@@ -138,7 +138,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
+										<img src="images/politics.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Political Science</h2>
@@ -149,7 +149,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
+										<img src="images/sprit.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Spirituality</h2>
@@ -160,10 +160,10 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/languages.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Hindi</h2>
+										<h2>Languages</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -171,7 +171,7 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
+										<img src="images/AI-2.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>AI</h2>
@@ -182,7 +182,7 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
+										<img src="images/social.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Social Science</h2>
